// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RTLToggle checked renders 1`] = `
<span
  class="sc-bczRLJ kxUEBA"
>
  <label
    class="sc-gsnTZi ecyAuL"
  >
    <input
      aria-controls="rtl-status"
      checked=""
      class="sc-dkzDqf khKIDk"
      data-testid="rtl-toggle-input"
      type="checkbox"
    />
    <a
      class="sc-hKMtZM kLroqp"
    >
      Enable right-to-left
    </a>
  </label>
  <span
    aria-live="polite"
    class="sc-eCYdqJ gVppkG"
    id="rtl-status"
    role="region"
  >
    Right-to-left
  </span>
</span>
`;

exports[`RTLToggle default renders 1`] = `
<span
  class="sc-bczRLJ kxUEBA"
>
  <label
    class="sc-gsnTZi isuMOS"
  >
    <input
      aria-controls="rtl-status"
      class="sc-dkzDqf khKIDk"
      data-testid="rtl-toggle-input"
      type="checkbox"
    />
    <a
      class="sc-hKMtZM jsWbyR"
    >
      Enable right-to-left
    </a>
  </label>
  <span
    aria-live="polite"
    class="sc-eCYdqJ gVppkG"
    id="rtl-status"
    role="region"
  >
    Left-to-right
  </span>
</span>
`;

exports[`RTLToggle unchecked renders 1`] = `
<span
  class="sc-bczRLJ kxUEBA"
>
  <label
    class="sc-gsnTZi isuMOS"
  >
    <input
      aria-controls="rtl-status"
      class="sc-dkzDqf khKIDk"
      data-testid="rtl-toggle-input"
      type="checkbox"
    />
    <a
      class="sc-hKMtZM jsWbyR"
    >
      Enable right-to-left
    </a>
  </label>
  <span
    aria-live="polite"
    class="sc-eCYdqJ gVppkG"
    id="rtl-status"
    role="region"
  >
    Left-to-right
  </span>
</span>
`;
